Fixed the header and the horizontal scroll bg-color and added logo.

--- a/css/showcase.css
+++ b/css/showcase.css
@@ -89,8 +89,9 @@
 
 	.clapat-slider-wrapper {
 		width:100%;
-		height: 100vh;
+		height: 70vh;
 		position:relative;	
+		background-color: #1f3533;
 	}
 
 	.clapat-slider {
@@ -1445,9 +1446,9 @@
 	  left: 50%;
 	  transform: translateX(-50%);
 	  width: 1920px;
-	  height: 1012px;
+	  height: 1212px;
 	  max-width: 100vw;
-	  max-height: calc(100vh - 0px);
+	  max-height: calc(180vh - 0px);
 	  object-fit: cover;
 	  object-position: top center;
 	  z-index: 0; /* raised so it sits above the page-bg but below overlay/header */
